<resources>
    <string name="app_name">Scorekeeper App</string>
    <string name="question_text">This is a true or false question</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="correct_toast">Congratulations! That is the correct toast.</string>
    <string name="incorrect_toast">Sorry, that is not correct</string>
    <string name="increase_button1">INCREASE SCORE</string>
    <string name="increase_button2">INCREASE SCORE</string>
    <string name="decrease_button1">DECREASE SCORE</string>
    <string name="decrease_button2">DECREASE SCORE</string>
    <string name="inc_button_desc">Increase value</string>
    <string name="dec_button_desc">Decrease value</string>
    <string name="user_score1">User number 1 Score</string>
    <string name="user_score2">User number 2 Score</string>
    <string name="team1">TEAM #1</string>
    <string name="team2">TEAM #2</string>
    <string name="score_team1">0</string>
    <string name="score_team2">0</string>
    <string name="save_scores">Save Scores</string>
    <string name="save_settings">Save Scores</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="save_scores_switch">Save Scores</string>
    <string name="radio_button_option1">1 Pointer</string>
    <string name="radio_button_option2">2 Pointer</string>
    <string name="radio_button_option3">3 Pointer</string>
    <string name="developer_info">Developer: Dennis Padilla\nJAV-1001\nApp Development for Android</string>

</resources>