<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/blue6">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                style="@style/TextViewCustomFontStyle"
                android:text="@string/team1" />

            <TextView
                android:id="@+id/scoreTextView1"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:gravity="center"
                style="@style/TextViewCustomFontStyle1_2"
                android:text="@string/score_team1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <Button
                android:id="@+id/increase_button_t1"
                style="@style/ButtonCustomStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/increase_button"
               />

            <Button
                android:id="@+id/decrease_button_t1"
                style="@style/ButtonCustomStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/decrease_button"
                />

        </LinearLayout>

    </LinearLayout>
    <RadioGroup
        android:id="@+id/incrementOptionsRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/blue7"
        android:gravity="center"
        >

        <RadioButton
            android:id="@+id/option1RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_option1"
            style="@style/RadioButtonStyle"
            />

        <RadioButton
            android:id="@+id/option2RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_option2"
            style="@style/RadioButtonStyle"/>

        <RadioButton
            android:id="@+id/option3RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_option3"
            style="@style/RadioButtonStyle"/>


    </RadioGroup>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/blue8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/team2"
                style="@style/TextViewCustomFontStyle2_1" />

            <TextView
                android:id="@+id/scoreTextView2"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:gravity="center"
                style="@style/TextViewCustomFontStyle2_2"
                android:text="@string/score_team2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <Button
                android:id="@+id/increase_button_t2"
                style="@style/ButtonCustomStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/increase_button"
                />

            <Button
                android:id="@+id/decrease_button_t2"
                style="@style/ButtonCustomStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/decrease_button"
                />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>